# discord-rpc

./: Cargo.toml  README.MD  README.md  build.rs  profiles.toml
lib/discord-rich-presence/: Cargo.toml  LICENSE
lib/discord-rich-presence/src/: activity.rs  discord_ipc.rs  error.rs  ipc_unix.rs  ipc_windows.rs  lib.rs  pack_unpack.rs
lib/discord-rich-presence/tests/: models_test.rs  reconnect_test.rs  update_test.rs
src/: config.rs  error.rs  main.rs  prelude.rs
