[package]
name = "discord-rpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Async
tokio = {version = "1.35.1", features = ["full"]}

# Error handling
anyhow = "1.0.79"
thiserror = "1.0.56"

# Logging
log = "0.4.20"
env_logger = "0.11.1"

# config / ser / de
serde = { version = "1.0.194", features = ["derive"]}
serde_json = "1.0.113"
toml = "0.8.8"
config = "0.14.0"

# Discord RPC
discord-rich-presence = {path = "lib/discord-rich-presence"}

# Misc
ctrlc = "3.4.2"
chrono = "0.4.33"